# text2speech

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  Taskfile.yml  hello.txt  main.py  pyproject.toml  requirements.dev.txt  requirements.txt  speech2txt.py  txt2speech.py
azure_translation/common/: configure.py
azure_translation/speech2text/: main.py
azure_translation/text2speech/: main.py  voices.py
tests/: conftest.py
tests/azure_translation/common/: test_configure.py
tests/azure_translation/speech2text/: test_main.py
tests/azure_translation/text2speech/: test_main.py  test_voices.py
tests/speech2text/: test_main.py
tests/text2speech/: test_main.py  test_voices.py
text2speech/: main.py
